fix: CLIN-2001 added max width + ellipsis on overflow for consequenceCell (#474)

--- a/src/views/Snv/components/ConsequencesCell/index.module.scss
+++ b/src/views/Snv/components/ConsequencesCell/index.module.scss
@@ -23,6 +23,10 @@
 
 .detail {
   padding-right: 4px;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .bullet {
